# libplctag

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  ci.yml.in
cmake_toolchains/: android.cmake  apple.cmake  clang_or_gcc.cmake  cross_build.cmake  mingw.cmake  msvc.cmake  unix.cmake  windows.cmake
src/contrib/cli/: cli.c
src/examples/: CMakeLists.txt  async.c  async_stress.c  barcode_test.c  busy_test.c  compat_utils.c  compat_utils.h  data_dumper.c  list_tags_logix.c  list_tags_micro8x0.c  list_tags_omron.c  list_tags_omron_incomplete.c  multithread.c  multithread_cached_read.c  multithread_plc5.c  multithread_plc5_dhp.c  plc5.c  simple.c  simple_cpp.cpp  simple_dual.c  slc500.c  stress_api_lock.c  stress_rc_mem.c  stress_test.c  string_non_standard_udt.c  string_standard.c  tag_rw2.c  tag_rw_deprecated.c  test_alternate_tag_listing.c  test_array_notation.c  test_auto_sync.c  test_callback.c  test_callback_ex.c  test_callback_ex_logix.c  test_callback_ex_modbus.c  test_connection_group.c  test_emulator_performance.c  test_event.c  test_indexed_tags.c  test_raw_cip.c  (+12 more)
src/lib/: lib.c
src/libplctag/: CMakeLists.txt
src/libplctag/lib/: init.c  lib.c  libplctag.h  tag.h  version.h
src/libplctag/protocols/ab/: ab_common.c  ab_common.h  cip.c  cip.h  defs.h  eip_cip.c  eip_cip.h  eip_cip_special.c  eip_cip_special.h  eip_lgx_pccc.c  eip_lgx_pccc.h  eip_plc5_dhp.c  eip_plc5_dhp.h  eip_plc5_pccc.c  eip_plc5_pccc.h  eip_slc_dhp.c  eip_slc_dhp.h  eip_slc_pccc.c  eip_slc_pccc.h  error_codes.c  pccc.c  pccc.h  session.c  session.h  tag.h
src/libplctag/protocols/mb/: modbus.c
src/libplctag/protocols/omron/: cip.c  cip.h  conn.c  conn.h  defs.h  omron_common.c  omron_common.h  omron_raw_tag.c  omron_raw_tag.h  omron_standard_tag.c  omron_standard_tag.h  tag.h
src/libplctag/protocols/system/: system.c
src/platform/posix/: platform.c
src/platform/windows/: platform.c  platform.h
src/protocols/ab/: ab_common.c  eip_lgx_pccc.c  eip_plc5_dhp.c  session.c
src/protocols/omron/: cip.c  cip.h  conn.c  omron_common.c  omron_common.h  omron_standard_tag.c
src/tests/: CMakeLists.txt  run_full_tests.sh  run_local_tests.sh  run_simulator_tests.sh  run_tests.sh
src/tests/ab_server/src/: cip.c  compat.h  main.c  memory.c  memory.h  mutex.c  mutex.h  pccc.c  plc.h  slice.h  socket.c  socket.h  tcp_server.c  tcp_server.h  thread.c  thread.h  utils.c  utils.h
src/tests/modbus_server/: modbus_server.c
src/utils/: rc.c  vector.c  vector.h
